# M8_KitCreator

./: BUILD.md  CLAUDE.md  InterfaceTest_02.py  LICENSE  M8_KitBasher.py  M8_KitBasher_0.01.py  M8_KitBasher_0.08.py  M8_KitBasher_0.09.py  M8_KitBasher_0.11.py  M8_KitBasher_0.12.py  M8_KitBasher_0.20.py  M8_KitBasher_0.22.py  M8_KitCreator.spec  README.md  SESSION_NOTES.md  STEREO_FIX_ANALYSIS.md  TASKS.md  build.sh  hook-distutils.py  pyproject.toml  requirements-build.txt  requirements.txt  run_tests.py  setup.py  verify_duplicate_logic.py
m8_kitcreator/: README.md  __init__.py  audio_processor.py  config.py  exceptions.py  gui.py  octatrack_writer.py  utils.py
tests/: README.md  __init__.py  test_audio_processor.py  test_config.py  test_exceptions.py  test_gui_logic.py  test_octatrack_writer.py  test_utils.py
versions/: InterfaceTest_01.py  InterfaceTest_03.py  M8_KitBasher_0.07.py  M8_KitBasher_0.11.py  M8_KitBasher_0.13.py  M8_KitBasher_0.14.py  M8_KitBasher_0.21.py  M8_KitBasher_0.23.py  M8_KitBasher_0.24.py
